--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,63 @@
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.8.0
+anyio==4.9.0
+async-timeout==5.0.1
+attrs==25.1.0
 bcrypt==4.3.0
-cffi==1.17.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
-cryptography==44.0.2
 cx_Oracle==8.3.0
+datasets==3.3.2
+dill==0.3.8
 dnspython==2.7.0
-ecdsa==0.19.0
+dotenv==0.9.9
 email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.11
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2024.12.0
 greenlet==3.1.1
 h11==0.14.0
+huggingface-hub==0.29.1
 idna==3.10
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.4.2
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
 passlib==1.7.4
-pyasn1==0.4.8
-pycparser==2.22
+pillow==11.1.0
+propcache==0.3.0
+pyarrow==19.0.1
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-jose==3.4.0
-python-multipart==0.0.20
-rsa==4.9
+pytz==2025.1
+PyYAML==6.0.2
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.38
-starlette==0.46.0
+SQLAlchemy==2.0.39
+starlette==0.46.1
+sympy==1.13.3
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
 uvicorn==0.34.0
+xxhash==3.5.0
+yarl==1.18.3
